--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> CSS Basics</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- I applied both the normalize and eric meyers css reset-->
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <nav>
@@ -28,13 +31,13 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <div class="element last-3">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <div class="element last-3">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <div class="element last-3">
         <h3>This is text for a div element</h3>
       </div>
     </section>
